User authentication complete; finishing login
